# inventory-manager

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  setup.cfg
Week-1/: datatypes_demo.py  pythonic_demo.py
Week-2/: conditionals_functions.py  dicts.py  lists.py  sets.py  tuples.py
Week-2/data_validation/: inventory.csv  low_stock_report.txt  process_inventory.py  validate_inventory.py
Week-2/exception_handling/: exceptions.py
Week-2/file_handling/: example.txt  modes.py  reader.py
Week-3/: pyproject.toml  requirements.txt
Week-3/inventory_manager/: core.py  models.py
Week_1/: datatypes_demo.py  main.py  pythonic_demo.py
Week_2/: conditionals_functions.py  dicts.py  tuples.py
Week_2/data_validation/: process_inventory.py
Week_2/exception_handling/: numbers.txt
Week_2/file_handling/: content.txt  modes.py  output.csv  students.csv
Week_3/: main.py  pyproject.toml
Week_3/data/: products.csv
Week_3/inventory_manager/: core.py  models.py  utils.py
Week_4/tests/: conftest.py  requirements.txt  test_core.py  test_models.py  test_utils.py
Week_5/: app.py  requirements.txt
Week_5/Day1/: hello.py
Week_5/api/: __init__.py  products.py  routes.py
Week_6_7/: .env.example
Week_6_and_7/: .env.example
Week_8/: README.md  requiremnets.txt
Week_9/: .env.example  README.md  report.txt  requirements.txt
docs/: ARCHITECTURE.md  DEVELOPMENT.md  SETUP.md  TESTING.md  architecture.md
tests/: conftest.py  test_core.py  test_inventory.py  test_models.py  test_models_using_fixtures.py  test_product.py  test_utils.py
(+78 files in other folders)
